--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -146,13 +146,11 @@
   	"description": "Подпись поля разделителя вложенных меток"
   },
   "options_enableNotes": {
-  	"message": "Показывать примечания к закладкам (Предупреждение: локальные URL в закладках будут пустыми)",
-  	"description": ""
+    "message": "Показывать примечания к закладкам (Предупреждение: локальные URL в закладках будут пустыми)",
+    "description": ""
   },
-
-
-  "options": {
-  	"message": "",
+  "options_enableLabelUnlabeled": {
+  	"message": "Метка для закладок без метки:",
   	"description": ""
   }
 }
