+ showURL() + options_reverseLeftClick + tree nodes handle clicks

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -155,6 +155,10 @@
    "options_enableLabelUnlabeled": {
     "message": "Label Unlabeled Bookmarks:",
     "description": ""
+  },
+  "options_reverseLeftClick": {
+    "message": "Открывать закладки в той же вкладке",
+    "description": ""
   }
 
 
