! change cntx-page-go depends on reverseLeftClick

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -52,6 +52,9 @@
   "cntx-page-go": {
     "message": "Open in current Tab"
   },
+  "cntx-page-inNewTab": {
+    "message": "Open bookmark in new Tab"
+  },
   "cntx-page-edit": {
     "message": "Edit"
   },
