--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -90,7 +90,7 @@
     "description": "Надпись поля с метками закладки"
   },
   "editBkmkDlg_notes": {
-    "message": "Заметки:",
+    "message": "Примечание:",
     "description": "Надпись поля с заметками закладки"
   },
 
@@ -147,25 +147,63 @@
     }
   },
 
+  "options_mainPanel": {
+    "message": "Основные"
+  },
+  "options_advPanel": {
+    "message": "Другие"
+  },
+  "options_iconsPanel": {
+    "message": "Иконки"
+  },
   
   "options_saveBtn": {
   	"message": "Сохранить",
   	"description": "Надпись кнопки сохранения настроек дополнения"
   },
+  "options_fildsetShowLegend": {
+    "message": "Показывать:"
+  },
+
   "options_nestedLabelSep": {
-  	"message": "Разделитель вложенных меток",
-  	"description": "Подпись поля разделителя вложенных меток"
+    "message": "Разделитель вложенных меток"
   },
   "options_enableNotes": {
-    "message": "Показывать примечания к закладкам (Предупреждение: локальные URL в закладках будут пустыми)",
-    "description": ""
+    "message": "примечания к закладкам (Предупреждение: локальные URL в закладках будут пустыми)"
   },
   "options_enableLabelUnlabeled": {
-    "message": "Метка для закладок без метки:",
-    "description": ""
+    "message": "Метка для закладок без метки:"
   },
   "options_reverseLeftClick": {
-  	"message": "Открывать закладки в той же вкладке",
-  	"description": ""
+    "message": "Открывать закладки в той же вкладке"
+  },
+  "options_showFavicons": {
+    "message": "иконки сайтов (http://www.google.com/s2/favicons)"
+  },
+
+  "options_sortType": {
+    "message": "Сортировать по:"
+  },
+  "options_sortType_name": {
+    "message": "названию"
+  },
+  "options_sortType_timestamp": {
+    "message": "дате"
+  },
+  "options_sortOrder_asc": {
+    "message": "по возрастанию"
+  },
+  "options_sortOrder_desc": {
+    "message": "по убыванию"
+  },
+  "options_enable10recentBookmark": {
+    "message": "10 последних добавленных закладок"
+  },
+  "options_enable10visitedBookmark": {
+    "message": "10 самых популярных закладок"
+  },
+  "options_showTagsInTooltip": {
+    "message": "метки во всплывающей подсказке"
   }
+
 }
