+ export label to HTML

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -53,7 +53,7 @@
     "message": "Убрать из скрытых все"
   },
   "cntx-folder-menuExport": {
-    "message": "?Экспорт в HTML"
+    "message": "Экспорт в HTML"
   },
 
   "cntx-page-go": {
