! popup.css - new hmenu styles + $("a.clrBtn").on("keypress click") - clear filter button + var _getMsg = browser.i18n.getMessage;

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -19,6 +19,16 @@
     "message": "Delete current page from Bookmarks",
     "description": "Подсказка - Удаление закладки"
   },
+  "popup_hmenuAddOpenTabs": {
+    "message": "Bookmark all open tabs"
+  },
+  "popup_hmenuOpt": {
+    "message": "Open settings"
+  },
+    "popup_hmenuGBs": {
+    "message": "Go to Google Bookmarks Page"
+  },
+
 
   "popup_RecentLabel": {
     "message": "10 most recent bookmarks"
