+* DnD (labels, moveBookmark) + menuAddAllTabs ! $("#bkmk-tree").on("click") - click afrer dragStart ! tabindex - manifest.json - remove content section

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -138,6 +138,19 @@
     }
   },
 
+  "addAllTabsDlg_title": {
+    "message": "Bookmark open tabs"
+  },
+  "addAllTabsDlg_label": {
+    "message": "Labels:"
+  },
+  "addAllTabsDlg_tblHeadTitle": {
+    "message": "Title"
+  },
+  "addAllTabsDlg_tblHeadUrl": {
+    "message": "URL"
+  },
+
   "confirmDlg_title": {
     "message": "Action confirmation"
   },
