+ label suggestion for new bookmarks ! reloadBkmks() - reset arrays (bookmarks, labels, tree)

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -293,6 +293,9 @@
   },
   "options_msgSaved": {
     "message": "Settings have been saved"
+  },
+  "options_suggestLabel": {
+    "message": "Automatically propose label"
   },  
 
   "contextMenuAddBookmark": {
