+ options_loadOnStart ! css width

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -296,6 +296,9 @@
   },
   "options_suggestLabel": {
     "message": "Automatically propose label"
+  },
+  "options_loadOnStart": {
+    "message": "Load bookmarks on start"
   },  
 
   "contextMenuAddBookmark": {
