--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -311,6 +311,9 @@
   "options_suggestLabel": {
     "message": "Автоматически предлагать метку"
   },
+  "options_loadOnStart": {
+    "message": "Загружать закладки при старте"
+  },
 
   "contextMenuAddBookmark": {
     "message": "Добавить страницу в Google Bookmarks"
